[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Tilemap/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Fonts/montserrat_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/science container_64.png" type="Texture" id=4]
[ext_resource path="res://src/Levels/Game.gd" type="Script" id=5]
[ext_resource path="res://addons/carmel4a97.RTS_Camera2D/RTS-Camera2D.gd" type="Script" id=6]
[ext_resource path="res://assets/tiles/decorations.png" type="Texture" id=7]

[sub_resource type="TileSet" id=1]
0/name = "decorations.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRow" type="HBoxContainer" parent="HUD/UI"]
margin_left = 64.0
margin_top = 576.0
margin_right = 1280.0
margin_bottom = 704.0
size_flags_vertical = 3
custom_constants/separation = 85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CureCounter" type="Label" parent="HUD/UI/BottomRow"]
margin_top = 34.0
margin_right = 33.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="CureIcon" type="TextureRect" parent="HUD/UI/BottomRow/CureCounter"]
margin_left = 33.0
margin_top = -34.0
margin_right = 97.0
margin_bottom = 94.0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayCounter" type="Label" parent="HUD/UI/BottomRow"]
margin_left = 118.0
margin_top = 34.0
margin_right = 251.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 3 )
text = "Day 1"

[node name="Decorations" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 255 )
current = true
script = ExtResource( 6 )
